--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
-table{
-    width: 100% !important;
+table {
+  width: 100% !important;
+}
+footer {
+  height: 80px;
+  background-color: #c3c3c3;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+
+footer h5 {
+  color: #ffff;
 }
